      possible covers.
    * Improved guessing tags from filename. Added preview to Dialog.
    * Display frames around lyrics/video applets for indicating focus.
    * Improved keyboard functions when editing lyrics from the applet.
    * Improved automatic resizing of lyrics and suggestions in the context applet.

  BUGFIXES:
    * Fixed multilevel playlist sorting by time since last played so it sorts
      numerically rather than alphabetically. (BR 214761)
    * Fixed crash with "Edit Track Details" dialog. (BR 217625)
    * Fixed a number of cases where markers such as "current track", "stop after 
      this track" and others would get shown in both group header and the first 
      track in the group. (BR 197842)
    * Fixed regression causing non default moodbar styles to not work.
    * Jamendo.com service: Fixed track lengths not getting shown for most tracks.
      For existing installs, this requires a redownload of the Jamendo database.
      (BR 200531)
    * Jamendo.com service: Fixed searches not working because of Sql errors.
    * Jamendo.com service: Removed broken "Unknown" genre which would freeze
      Amarok if expanded. For existing installs, this requires a redownload of the 
      Jamendo database. (BR 213165)
    * Playback of Audio CD track now correctly stops if track is the last in the
      playlist. (BR 216175)
    * Fixed crash if user clicks rating widget on the current track applet while no
      track is playing (which is possible since there is a slight delay before the 
      applet switches "mode"). (BR 215471)
    * Made "Last.fm Love" (and potentially other global actions avaiable for all 
      tracks) correctly show up in the Current Track applet.
    * Fixed two bookmark actions having the same text description. (BR 214716)
    * Remove broken right click menu from the Info applet. (BR 206642)
    * Fix several bugs handling changing compilations. Patch by Morten Sjøgren
      <m_abs@mabs.dk> -- thanks!